fixing home div items overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ img {
     display: flex;
     align-items: center;
     font-weight: bold;
+    position: absolute;
 }
   
 @keyframes glitchTop{
@@ -152,7 +153,7 @@ img {
 	color:rgb(0, 21, 255);
 	padding-top:1.8em;
 	display:inline-block;/* or block */
-	position:relative;
+	position:absolute;
 	border-color:rgb(0, 21, 255);
 	text-decoration:none ;
 	transition:all .3s ease-out;
@@ -549,6 +550,7 @@ img {
         display: flex;
         align-items: flex-start;
         font-weight: bold;
+        position: absolute;
     }
     
     @keyframes glitchTop{
@@ -585,7 +587,7 @@ img {
         color:rgb(0, 21, 255);
         padding-top:1.8em;
         display:inline-block;/* or block */
-        position:relative;
+        position:absolute;
         border-color:rgb(0, 21, 255);
         text-decoration:none ;
         transition:all .3s ease-out;
